gap fix

--- a/src/App.css
+++ b/src/App.css
@@ -2420,7 +2420,7 @@ aside {
   }
   .banner-img-text {
     font-size: 42px !important;
-    line-height: 60px !important;
+    line-height: 50px !important;
   }
   .banner-para-text {
     font-size: 24px !important;
@@ -2505,7 +2505,7 @@ aside {
   }
   .banner-img-text {
     font-size: 42px !important;
-    line-height: 60px !important;
+    line-height: 50px !important;
   }
   .banner-para-text {
     font-size: 24px !important;
